// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-blueprint should get a document blueprint by id 1`] = `
{
  "content": [
    {
      "text": "{"documentType":{"id":"00000000-0000-0000-0000-000000000000","icon":"icon-settings color-pink","collection":null},"id":"00000000-0000-0000-0000-000000000000","values":[],"variants":[{"state":"Draft","publishDate":null,"scheduledPublishDate":null,"scheduledUnpublishDate":null,"createDate":"2000-01-01T00:00:00.000Z","updateDate":"2000-01-01T00:00:00.000Z","culture":null,"segment":null,"name":"_Test Blueprint Get"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-blueprint should handle non-existent document blueprint 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
